======================================================
network-manager-applet-1.4
Overview of changes since network-manager-applet-1.2.0
======================================================

This is a new stable release of network-manager-applet.  Notable changes include:

* Added support for multiple VPN connections
* Added new pages for changing team and team-port configurations
* Improved error reporting in the wireless security page
* A single VPN plugins now supports the creation of multiple
    connection types
* Fixed some crashes

======================================================
network-manager-applet-1.2
Overview of changes since network-manager-applet-1.0.0
======================================================

This is a new stable release of network-manager-applet.  Notable changes include:

* Ported to libnm, GDBus
* Added new libnm-based client library (libnma)
* Add support for libappindicator
* Translation updates
* Numerous crasher and memory leak bugs were fixed

The following features were backported to 1.0.x releases from 1.0.0 to 1.0.10
are also present in network-manager-applet-1.2:

* Bluetooth page in connection editor is now populated with available Bluetooth
  devices
* Added hotspot support to the editor
* Password widgets now emits a signal for secret flag changes
* The connection validation errors are now communicated in a tooltip
* The editor is now able to edit the VLAN flags
* Added option to set MTU of Team devices
* Added AppData for nm-connection-editor
* Setting MTU for a bond device is now supported
* Connecting to a wireless network from the NetworkManager applet no longer
    results in an attempt to create system-wide connections.  This fixes the
    ability to connect to a wireless network for non-privileged user
* The master interface name is used instead of master connection UUID for
   slave connections created with nm-connection-editor.  This fixes