@@ -1512,7 +1512,6 @@
                         <property name="can_focus">True</property>
                         <property name="hexpand">True</property>
                         <property name="vexpand">True</property>
-                        <property name="monospace">True</property>
                       </object>
                     </child>
                   </object>
