@@ -1,4 +1,15 @@
 ======================================================
+network-manager-applet-1.4.2
+Overview of changes since network-manager-applet-1.4.0
+======================================================
+
+This is a new stable release of network-manager-applet.  Notable changes include:
+
+* Removed UI property that required gtk3 >= 3.16
+* Added a workaround for broken strict matching with old Jansson
+    versions
+
+======================================================
 network-manager-applet-1.4
 Overview of changes since network-manager-applet-1.2.0
 ======================================================
